Fixed on small screen where title of page was overlapping

--- a/static/style.css
+++ b/static/style.css
@@ -357,6 +357,9 @@ a {
   transform: translateY(25%);
       }
     
+      h1 {
+        padding-left: 1rem;
+      }
   }
   
   /* For medium screens (e.g. tablet) */
